<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:fontFamily="@font/montserrat_black"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:layout_margin="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="70dp"
            android:gravity="center">

            <EditText
                android:id="@+id/regusername"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:paddingStart="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/purple"
                android:hint="@string/username"
                android:background="@color/white"/>

            <EditText
                android:id="@+id/regpassword"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:paddingStart="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/purple"
                android:hint="@string/password"
                android:background="@color/white"/>

            <EditText
                android:id="@+id/regnama"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:paddingStart="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/purple"
                android:hint="@string/nama"
                android:background="@color/white"/>

            <EditText
                android:id="@+id/regnohp"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:paddingStart="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/purple"
                android:hint="@string/nomor_handphone"
                android:background="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:textSize="15sp"/>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            
            <TextView
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:fontFamily="@font/montserrat_black"
                android:textColor="@color/white"
                android:textSize="30sp"/>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/btnregister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/register"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="120dp"/>

            </LinearLayout>
            
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>