<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".profileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/conspertama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/biodata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:layout_marginTop="20dp"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/bio_data"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/profilepic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/biodata"
            app:layout_constraintRight_toRightOf="parent"
            app:cardCornerRadius="1000dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/nusa"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/profilepic"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/white"
                android:text="@string/developer"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/dev_email"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/username"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:paddingStart="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:textColor="@color/purple"
            android:text="@string/your_user_name"
            android:background="@color/white"
            />

        <TextView
            android:id="@+id/nameprofile"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:paddingStart="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:textColor="@color/purple"
            android:text="@string/what_s_your_name"
            android:background="@color/white"
           />

        <TextView
            android:id="@+id/nomorhp"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:paddingStart="20dp"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:textColor="@color/purple"
            android:text="@string/phone_number"
            android:background="@color/white"
            />



    </LinearLayout>

    </LinearLayout>

    </ScrollView>

</FrameLayout>