<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginActivity">



    <LinearLayout
        android:id="@+id/loginlinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:layout_marginTop="50dp"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="200dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:scaleType="centerCrop"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/loginlinear"
            app:layout_constraintRight_toRightOf="parent">

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:paddingStart="20dp"
                android:layout_marginTop="80dp"
                android:textColor="@color/purple"
                android:hint="@string/username"
                android:background="@color/white"
                />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:paddingStart="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/purple"
                android:hint="@string/password"
                android:background="@color/white"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnlogin"
                    android:layout_width="150dp"
                    app:layout_constraintRight_toLeftOf="@id/btnsignup"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"/>

                <Button
                    android:id="@+id/btnsignup"
                    android:layout_width="150dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/btnlogin"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

        </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>