<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/kotakungu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardBackgroundColor="@color/purple">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearly"
       android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recruitmentposition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/core_team"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="@font/montserrat_black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/organisasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="20dp"
                android:textSize="15sp"
                android:text="@string/nama_orgnisasi"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_black"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/available_slot"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_medium"/>

                <TextView
                    android:id="@+id/slotposisi"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="10 Person"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_medium"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tanggalrecruitment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/gray"
                    android:text="Tanggal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="to"
                    android:textColor="@color/gray"
                     />

                <TextView
                    android:id="@+id/tanggalakhir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/gray"
                    android:text="Tanggal khir" />

            </LinearLayout>

            <TextView
                android:id="@+id/clickformore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/click_for_more_information"
                android:layout_margin="8dp"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_medium"/>


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="9dp"
                android:layout_gravity="center"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:id="@+id/recruiterimage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/nusa"/>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/expandable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/linearly"
            app:layout_constraintRight_toRightOf="parent"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/syarat"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:text="@string/deskripsi"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

            <Button
                android:id="@+id/btndaftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/daftar_sekarang"
                android:textColor="@color/white"
                />

            </LinearLayout>

        </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>